update page acceuil

--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -114,7 +114,7 @@
         .flag {
             width: 24px;
             height: 16px;
-            background-image: url('https://upload.wikimedia.org/wikipedia/en/c/c3/Flag_of_France.svg');
+            background-image: url('pictures/entreprise.jpg');
             background-size: cover;
             margin-right: 8px;
         }
