--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -888,7 +888,7 @@
 </footer>
 
 
-    
+<script src="{{ asset('js/tracking.js') }}"></script>  
 <script src="{{ asset('js/menu.js') }}"></script>
 <script src="{{ asset('js/index.js') }}"></script>
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
