--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -267,6 +267,7 @@
     align-items: center;
 }
 
+
 .carousel-button:hover {
     background-color: #ff6600;
     color: #ffffff;
@@ -734,7 +735,7 @@
             <p>
                 La société Coup’Acier a été créée en 2015 et permet à ses clients la vente de métaux.
                 Les clients sont des entreprises et des particuliers. La société dispose de plusieurs
-                entrepôts pour le stockage des métaux, leur découpe si besoin, et s’occupe de l’expédition.
+                entrepôts pour le stockage des métaux, leur découpe si besoin, et s’occupe de l’expédition. NIPUNA PAYAGALAGE
             </p>
             <h3>Nos Valeurs</h3>
             <ul>
