--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -737,9 +737,9 @@
                 Les clients sont des entreprises et des particuliers. La société dispose de plusieurs
                 entrepôts pour le stockage des métaux, leur découpe si besoin, et s’occupe de l’expédition. NIPUNA PAYAGALAGE
             </p>
-            <h3>Nos Valeurs</h3>
+            <h3>Nos Valeurs 2 test</h3>
             <ul>
-                <li>Qualité et Précision</li>
+                <li>Qualité et Précisionde test</li>
                 <li>Engagement envers nos clients</li>
                 <li>Innovation et Excellence</li>
             </ul>
