--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -739,7 +739,7 @@
             <h3>Nos Valeurs</h3>
             <ul>
                 <li>Qualité et Précision</li>
-                <li>Engagement envers nos clients</li>
+                <li>Engagement envers nos clients Test CI</li>
                 <li>Innovation et Excellence</li>
             </ul>
         </div>
